--- a/GGJ16/Config/DefaultInput.ini
+++ b/GGJ16/Config/DefaultInput.ini
@@ -18,15 +18,8 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Jump",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Jump",Key=Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
++AxisMappings=(AxisName="MoveUp",Key=W,Scale=-1.000000)
++AxisMappings=(AxisName="MoveUp",Key=S,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
