Added: Copyright artwork

--- a/GGJ16/Config/DefaultInput.ini
+++ b/GGJ16/Config/DefaultInput.ini
@@ -18,8 +18,11 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="BeatHit1",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveUp",Key=W,Scale=100.000000)
 +AxisMappings=(AxisName="MoveUp",Key=S,Scale=-100.000000)
++AxisMappings=(AxisName="MoveUp2",Key=Up,Scale=100.000000)
++AxisMappings=(AxisName="MoveUp2",Key=Down,Scale=-100.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
